deployments/traefik/02-custom_resource_definition.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-external
  namespace: traefik
spec:
  controller: traefik.io/ingress-controller
