deployments/traefik/09-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: basic-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-homepage
  namespace: traefik
spec:
  redirectRegex:
    regex: '^http(s?)://(.*)\.rcomanne\.nl'
    replacement: 'https://www.rcomanne.nl'

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: traefik
spec:
  stripPrefix:
    prefix:
      - /homepage
