deployments/traefik/10-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-middleware
  namespace: traefik
spec:
  basicAuth:
    secret: basic-auth
