deployments/traefik/06-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.4
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /acme
              name: acme
          args:
            - --configFile=/config/traefik.toml
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 8080
      volumes:
        - name: config
          configMap:
            name: traefik-conf
        - name: acme
          persistentVolumeClaim:
            claimName: traefik-pvc
