deployments/traefik/06-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-tcp
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
    app.kubernetes.io/version: 2
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip"
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
    - protocol: TCP
      name: https
      port: 443
  type: LoadBalancer
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
    app.kubernetes.io/version: 2
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
    app.kubernetes.io/version: 2

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: traefik-udp
#  namespace: traefik
#  labels:
#    app: traefik
#  annotations:
#    metallb.universe.tf/allow-shared-ip: "shared-ip"
#spec:
#  ports:
#    - protocol: UDP
#      name: valheim0
#      port: 2456
#    - protocol: UDP
#      name: valheim1
#      port: 2457
#    - protocol: UDP
#      name: valheim2
#      port: 2458
#  type: LoadBalancer
#  selector:
#    app: traefik
