deployments/traefik/07-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
    - protocol: TCP
      name: https
      port: 443
    - protocol: TCP
      name: admin
      port: 8080
  type: LoadBalancer
  selector:
    app: traefik
